[package]
name = "better_progress"
description = "Library for showing text based progress bar and job status"
authors = ["Ying-Ruei Liang (KK) <thumbd03803@gmail.com>", "volchok <me@aydar.media>"]
version = "0.1.0"
exclude = ["assets/*"]

homepage = "https://github.com/lesterrry/better-progress"
documentation = "https://github.com/lesterrry/better-progress"
readme = "README.md"
license = "MIT"

keywords = ["progress", "bar", "terminal"]

[dependencies]
terminal_size = "0.1.1"
